--- a/main.tex
+++ b/main.tex
@@ -61,4 +61,5 @@
 \backmatter
 \bibliographystyle{plainnat}
 \bibliography{references}
+\addcontentsline{toc}{chapter}{Daftar Pustaka}
 \end{document}
