--- a/references.bib
+++ b/references.bib
@@ -396,7 +396,7 @@
 }
 
 @misc{rfc8017,
-  title        = {PKCS #1: RSA Cryptography Specifications Version 2.2},
+  title        = {PKCS \#1: RSA Cryptography Specifications Version 2.2},
   author       = {J{"o}rg Schaad and Burt Kaliski and Russell Housley and Jim Randall and Quynh Dang},
   year         = {2016},
   howpublished = {RFC 8017},
