--- a/materi2/main.tex
+++ b/materi2/main.tex
@@ -12,10 +12,15 @@
 \usepackage{hyperref}
 \usepackage{subfiles}
 \usepackage{csquotes}
+\DeclareQuoteStyle{indonesian}
+  {\textquotedblleft}
+  {\textquotedblright}
+  {\textquoteleft}
+  {\textquoteright}
 \usepackage{microtype}
 \usepackage{natbib}
 \usepackage{xcolor}
-\hypersetup{colorlinks=true,linkcolor=blue,citecolor=blue,urlcolor=blue}
+\hypersetup{colorlinks=true,linkcolor=blue,citecolor=blue,urlcolor=blue,bookmarksnumbered=true}
 \setlist{nosep}
 
 % Penomoran lingkungan matematis per-bab
