--- a/materi2/references.bib
+++ b/materi2/references.bib
@@ -83,7 +83,7 @@
 }
 
 @misc{pkcs1v2_2,
-  title        = {PKCS #1: RSA Cryptography Specifications Version 2.2},
+  title        = {PKCS \#1: RSA Cryptography Specifications Version 2.2},
   author       = {Jonsson, J. and Kaliski, B.},
   year         = {2012}
 }
@@ -151,4 +151,31 @@
   institution = {NIST},
   number      = {SP 800-63-3},
   year        = {2017}
+}
+
+@misc{diffiehellman1976,
+  title        = {New Directions in Cryptography},
+  author       = {Whitfield Diffie and Martin E. Hellman},
+  howpublished = {IEEE Transactions on Information Theory},
+  year         = {1976}
+}
+
+@misc{rsa1978,
+  title        = {A Method for Obtaining Digital Signatures and Public-Key Cryptosystems},
+  author       = {Ronald L. Rivest and Adi Shamir and Leonard Adleman},
+  howpublished = {Communications of the ACM},
+  year         = {1978}
+}
+
+@misc{wikipedia_steganography,
+  title = {Steganography},
+  howpublished = {Wikipedia},
+  note = {Diakses 2025-10-06}
+}
+
+@misc{sp80057pt1r5,
+  title       = {Recommendation for Key Management: Part 1 - General},
+  institution = {NIST},
+  number      = {SP 800-57 Part 1 Rev. 5},
+  year        = {2020}
 }
