--- a/materi2/main.tex
+++ b/materi2/main.tex
@@ -2,9 +2,11 @@
 \documentclass[12pt,a4paper]{book}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage[indonesian]{babel}
+\usepackage[english,indonesian]{babel}
 \usepackage{lmodern}
 \usepackage{microtype}
+\usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage{geometry}
 \geometry{margin=1in}
 \usepackage{graphicx}
@@ -29,7 +31,7 @@
 \frontmatter
 
 % --- Custom Cover Page with University Logo ---
-\newcommand{\logopath}{assets/logo_ubb.png} % Place your logo file here (PNG/JPG/PDF)
+\newcommand{\logopath}{assets/logo_fak.jpg} % Place your logo file here (PNG/JPG/PDF)
 \begin{titlepage}
 \centering
 \vspace*{1cm}
