--- a/materi2/references/references.bib
+++ b/materi2/references/references.bib
@@ -134,7 +134,7 @@
   howpublished = {RFC 8017},
   publisher = {IETF},
   author = {J{"o}rn-Marc Schmidt and others},
-  title = {PKCS #1: RSA Cryptography Specifications Version 2.2},
+  title = {{PKCS} {\#}1: {RSA} Cryptography Specifications Version 2.2},
   year = {2016},
   url = {https://www.rfc-editor.org/rfc/rfc8017}
 }
